--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,7 +6,7 @@ galaxy_info:
   description: GnuCOBOL Installer
   company: Eckerd College
   license: MIT
-  min_ansible_version: 2.1
+  min_ansible_version: 2.0
   platforms:
     - name: EL
       versions:
@@ -24,7 +24,9 @@ galaxy_info:
     # - name: FreeBSD
     #   versions:
     #     - 10.2
-  categories:
+  galaxy_tags:
     - system
     - development
-    -
+    - cobol
+    - gnu
+    - installer
