Ubuntu 16.04 Goes By Xenial not Xerus

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -17,7 +17,7 @@ galaxy_info:
     #     - all
     - name: Ubuntu
       versions:
-        - xerus
+        - xenial
     # - name: Debian
     #   versions:
     #     - all
