--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,4 +1,8 @@
 ---
 - hosts: all
+  pre_tasks:
+    - name: Update apt cache.
+      apt: update_cache=yes
+      when: ansible_os_family == 'Debian'
   roles:
     - role_under_test
