--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -8,6 +8,17 @@
   include_vars: "{{ ansible_distribution }}-{{ ansible_distribution_version }}.yml"
   when: ansible_distribution == 'Ubuntu'
 
+- name: Include variables for Debian
+  include_vars: "{{ ansible_os_family }}.yml"
+  when:
+    - ansible_os_family == 'Debian'
+    - not ansible_distribution == 'Ubuntu'
+
+- name: Include variables for Fedora
+  include_vars: "{{ ansible_distribution }}.yml"
+  when: 
+    - ansible_distribution_version == 'Fedora'
+
 - name: Update Packages To Compile
   package:
     name: "{{ item }}"
