--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -2,7 +2,7 @@
 
 - name: Include version-specific variables for RedHat.
   include_vars: "{{ ansible_os_family }}-{{ ansible_distribution_major_version }}.yml"
-  when: ansible_os_family == "RedHat" and ansible_distribution_major_version >= 6
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version >= 6 and ansible_distribution_major_version <= 8
 
 - name: Include version-specific variables for Ubuntu.
   include_vars: "{{ ansible_distribution }}-{{ ansible_distribution_version }}.yml"
@@ -15,8 +15,8 @@
     - not ansible_distribution == 'Ubuntu'
 
 - name: Include variables for Fedora
-  include_vars: "{{ ansible_distribution }}.yml"
-  when: 
+  include_vars: "{{ ansible_distribution_version }}.yml"
+  when:
     - ansible_distribution_version == 'Fedora'
 
 - name: Update Packages To Compile
