--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,8 +1,18 @@
 ---
 
+- debug: var=ansible_os_family
+
+- debug: var=ansible_distribution
+
+- debug: var=ansible_distribution_major_version
+
+- debug: var=ansible_distribution_version
+
 - name: Include version-specific variables for RedHat.
   include_vars: "{{ ansible_os_family }}-{{ ansible_distribution_major_version }}.yml"
-  when: ansible_os_family == "RedHat" and ansible_distribution_major_version >= 6 and ansible_distribution_major_version <= 8
+  when:
+    - ansible_os_family == "RedHat"
+    - (ansible_distribution_major_version == 6 or ansible_distribution_major_version == 7)
 
 - name: Include version-specific variables for Ubuntu.
   include_vars: "{{ ansible_distribution }}-{{ ansible_distribution_version }}.yml"
@@ -15,9 +25,9 @@
     - not ansible_distribution == 'Ubuntu'
 
 - name: Include variables for Fedora
-  include_vars: "{{ ansible_distribution_version }}.yml"
+  include_vars: "{{ ansible_distribution }}.yml"
   when:
-    - ansible_distribution_version == 'Fedora'
+    - ansible_distribution == 'Fedora'
 
 - name: Update Packages To Compile
   package:
