--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -12,7 +12,7 @@
   include_vars: "{{ ansible_os_family }}-{{ ansible_distribution_major_version }}.yml"
   when:
     - ansible_os_family == "RedHat"
-    - (ansible_distribution_major_version == 6 or ansible_distribution_major_version == 7)
+    - (ansible_distribution_major_version == "6" or ansible_distribution_major_version == "7")
 
 - name: Include version-specific variables for Ubuntu.
   include_vars: "{{ ansible_distribution }}-{{ ansible_distribution_version }}.yml"
