--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -35,11 +35,21 @@
     state: present
   with_items: "{{ __gnucobol_dependencies }}"
 
+- name: Check if cobc is on path
+  command: /bin/bash which cobc
+  register: __gnucobol_start_which
+  changed_when: False
+  ignore_errors: True
+
+- debug: var=__gnucobol_start_which
+
 - name: Check Current Gnu Cobol Version
   command: /usr/local/bin/cobc -V
   register: __gnucobol_start_version
   changed_when: False
   ignore_errors: True
+
+- debug: var=__gnucobol_start_which
 
 - name: Fail If Incorrect Version Is Already Installed
   fail:
@@ -81,16 +91,15 @@
   register: __gnucobol_configureResult
   when: not __gnucobol_version_already_installed or gnu_cobol_recompile
 
-# - name: Make Clean
-#   make:
-#     chdir: "{{ gnu_cobol_base }}/{{ __gnucobol_unpacked_folder }}"
-#     target: clean
+- debug: var=__gnucobol_configureResult
 
 - name: Make GnuCobol
   make:
     chdir: "{{ gnu_cobol_base }}/{{ __gnucobol_unpacked_folder }}"
   register: __gnucobol_makeResult
   when: not __gnucobol_version_already_installed or gnu_cobol_recompile
+
+- debug: var=__gnucobol_makeResult
 
 - name: Make Check GnuCobol
   make:
