--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -10,7 +10,7 @@ __gnucobol_dependencies:
   - libgmp10
   - libgmp-dev
   - libltdl7
-  - libltdl-dev
+  - libltdl7-dev
   - libncurses5
   - libncurses5-dev
   - wget
