--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -61,37 +61,16 @@
   register: __gnucobol_configureResult
   when: not __gnucobol_version_already_installed or gnu_cobol_recompile
 
-- debug: var=__gnucobol_configureResult
-
-# - name: Make GnuCobol
-#   make:
-#     chdir: "{{ gnu_cobol_base }}/{{ __gnucobol_unpacked_folder }}"
-# register: __gnucobol_makeResult
-# when: not __gnucobol_version_already_installed or gnu_cobol_recompile
-
 - name: Make GnuCobol
-  command: >
-    chdir="{{ gnu_cobol_base }}/{{ __gnucobol_unpacked_folder }}"
-    /usr/bin/make
+  make:
+    chdir: "{{ gnu_cobol_base }}/{{ __gnucobol_unpacked_folder }}"
   register: __gnucobol_makeResult
   when: not __gnucobol_version_already_installed or gnu_cobol_recompile
 
-
-- debug: var=__gnucobol_makeResult
-
-# - name: Make Check GnuCobol
-#   make:
-#     chdir: "{{ gnu_cobol_base }}/{{ __gnucobol_unpacked_folder }}"
-#     target: check
-#   register: __gnucobol_checkResult
-#   when: not __gnucobol_version_already_installed or gnu_cobol_recompile
-
-
-
 - name: Make Check GnuCobol
-  command: >
-    chdir="{{ gnu_cobol_base }}/{{ __gnucobol_unpacked_folder }}"
-    /usr/bin/make check TESTSUITEFLAGS="--verbose --jobs=4"
+  make:
+    chdir: "{{ gnu_cobol_base }}/{{ __gnucobol_unpacked_folder }}"
+    target: check
   register: __gnucobol_checkResult
   when: not __gnucobol_version_already_installed or gnu_cobol_recompile
   ignore_errors: True
