--- a/.travis.yml
+++ b/.travis.yml
@@ -1,58 +1,58 @@
 services: docker
 
 env:
-  - distro: centos7
-    init: /usr/lib/systemd/systemd
-    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
-    version: 2
-  - distro: centos6
-    init: /sbin/init
-    run_opts: ""
-    version: 2
+  # - distro: centos7
+  #   init: /usr/lib/systemd/systemd
+  #   run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
+  #   version: 2
+  # - distro: centos6
+  #   init: /sbin/init
+  #   run_opts: ""
+  #   version: 2
   - distro: ubuntu1604
     init: /lib/systemd/systemd
     run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
     version: 2
-  - distro: ubuntu1404
-    init: /sbin/init
-    run_opts: ""
-    version: 2
-  - distro: ubuntu1204
-    init: /sbin/init
-    run_opts: ""
-    version: 2
-  - distro: debian8
+  # - distro: ubuntu1404
+  #   init: /sbin/init
+  #   run_opts: ""
+  #   version: 2
+  # - distro: ubuntu1204
+  #   init: /sbin/init
+  #   run_opts: ""
+  #   version: 2
+  # - distro: debian8
+  #   init: /lib/systemd/systemd
+  #   run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
+  #   version: 2
+  # - distro: fedora24
+  #   init: /usr/lib/systemd/systemd
+  #   run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
+  #   version: 2
+  # - distro: centos7
+  #   init: /usr/lib/systemd/systemd
+  #   run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
+  #   version: 1
+  # - distro: centos6
+  #   init: /sbin/init
+  #   run_opts: ""
+  #   version: 1
+  - distro: ubuntu1604
     init: /lib/systemd/systemd
     run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
-    version: 2
-  - distro: fedora24
-    init: /usr/lib/systemd/systemd
-    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
-    version: 2
-  - distro: centos7
-    init: /usr/lib/systemd/systemd
-    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
     version: 1
-  - distro: centos6
-    init: /sbin/init
-    run_opts: ""
-    version: 1
-  # - distro: ubuntu1604
+  # - distro: ubuntu1404
+  #   init: /sbin/init
+  #   run_opts: ""
+  #   version: 1
+  # - distro: ubuntu1204
+  #   init: /sbin/init
+  #   run_opts: ""
+  #   version: 1
+  # - distro: debian8
   #   init: /lib/systemd/systemd
   #   run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
   #   version: 1
-  - distro: ubuntu1404
-    init: /sbin/init
-    run_opts: ""
-    version: 1
-  - distro: ubuntu1204
-    init: /sbin/init
-    run_opts: ""
-    version: 1
-  - distro: debian8
-    init: /lib/systemd/systemd
-    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
-    version: 1
   # - distro: fedora24
   #   init: /usr/lib/systemd/systemd
   #   run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
@@ -60,8 +60,8 @@ env:
 
 
 before_install:
-  # Pull container.
-  - 'docker pull geerlingguy/docker-${distro}-ansible:latest'
+  # Pull container
+  - 'docker pull ChristopherDavenport/docker-${distro}-ansible-test1:latest'
 
 script:
   - container_id=$(mktemp)
