--- a/.travis.yml
+++ b/.travis.yml
@@ -1,81 +1,115 @@
 services: docker
 
 env:
-  - distro: centos7
-    init: /usr/lib/systemd/systemd
-    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
-    version: 2
-  - distro: centos6
-    init: /sbin/init
-    run_opts: ""
-    version: 2
-  - distro: ubuntu1604
+  - distribution: Ubuntu
+    distribution_version: yakkety
+    version: "2"
     init: /lib/systemd/systemd
     run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
-    version: 2
-  - distro: ubuntu1404
-    init: /sbin/init
-    run_opts: ""
-    version: 2
-  - distro: ubuntu1204
-    init: /sbin/init
-    run_opts: ""
-    version: 2
-  - distro: debian8
+  - distribution: Ubuntu
+    distribution_version: xenial
+    version: "2"
     init: /lib/systemd/systemd
     run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
-    version: 2
-  - distro: fedora24
+  - distribution: Ubuntu
+    distribution_version: trusty
+    version: "2"
+    init: /sbin/init
+    run_opts: ""
+  - distribution: Ubuntu
+    distribution_version: precise
+    version: "2"
+    init: /sbin/init
+    run_opts: ""
+  - distribution: EL
+    distribution_version: "7"
+    version: "2"
     init: /usr/lib/systemd/systemd
     run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
-    version: 2
-  - distro: centos7
-    init: /usr/lib/systemd/systemd
-    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
-    version: 1
-  - distro: centos6
+  - distribution: EL
+    distribution_version: "6"
+    version: "2"
     init: /sbin/init
     run_opts: ""
-    version: 1
-  # - distro: ubuntu1604
-  #   init: /lib/systemd/systemd
-  #   run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  #   version: 1
-  - distro: ubuntu1404
-    init: /sbin/init
-    run_opts: ""
-    version: 1
-  - distro: ubuntu1204
-    init: /sbin/init
-    run_opts: ""
-    version: 1
-  - distro: debian8
+  # - distribution: EL
+  #   distribution_version: "5"
+    # version: "8"
+  #   init: /sbin/init
+  #   run_opts: ""
+  - distribution: Debian
+    distribution_version: jessie
+    version: "2"
     init: /lib/systemd/systemd
     run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
-    version: 1
-  # - distro: fedora24
+  # - distribution: Fedora
+  #   distribution_version: "24"
+    # version: "8"
   #   init: /usr/lib/systemd/systemd
   #   run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
-  #   version: 1
+  - distribution: Ubuntu
+    distribution_version: yakkety
+    version: "1"
+    init: /lib/systemd/systemd
+    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
+  - distribution: Ubuntu
+    distribution_version: xenial
+    version: "1"
+    init: /lib/systemd/systemd
+    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
+  - distribution: Ubuntu
+    distribution_version: trusty
+    version: "1"
+    init: /sbin/init
+    run_opts: ""
+  - distribution: Ubuntu
+    distribution_version: precise
+    version: "1"
+    init: /sbin/init
+    run_opts: ""
+  - distribution: EL
+    distribution_version: "7"
+    version: "1"
+    init: /usr/lib/systemd/systemd
+    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
+  - distribution: EL
+    distribution_version: "6"
+    version: "1"
+    init: /sbin/init
+    run_opts: ""
+  # - distribution: EL
+  #   distribution_version: "5"
+    # version: "7"
+  #   init: /sbin/init
+  #   run_opts: ""
+  - distribution: Debian
+    distribution_version: jessie
+    version: "1"
+    init: /lib/systemd/systemd
+    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
+  # - distribution: Fedora
+  #   distribution_version: "24"
+    # version: "7"
+  #   init: /usr/lib/systemd/systemd
+  #   run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
 
 
 before_install:
   # Pull container.
-  - 'docker pull geerlingguy/docker-${distro}-ansible:latest'
+  - 'docker pull ansiblecheck/ansiblecheck:${distribution,,}-${distribution_version}'
 
 script:
   - container_id=$(mktemp)
 
-  # Run container in detached state.
-  - 'docker run --detach --volume="${PWD}":/etc/ansible/roles/role_under_test:ro ${run_opts} geerlingguy/docker-${distro}-ansible:latest "${init}" > "${container_id}"'
+  # Start The Built Container In The Background
+  - 'docker run --detach --volume="${PWD}":/etc/ansible/roles/role_under_test:ro ${run_opts} ansiblecheck/ansiblecheck:"${distribution,,}"-"${distribution_version}" "${init}" > "${container_id}"'
 
   # Ansible syntax check.
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-playbook /etc/ansible/roles/role_under_test/tests/test.yml --syntax-check'
 
   # Test role.
-  - 'docker exec "$(cat ${container_id})" ansible-playbook /etc/ansible/roles/role_under_test/tests/test.yml --extra-vars "gnu_cobol_version=${version}"'
+  - 'docker exec "$(cat ${container_id})" ansible-playbook /etc/ansible/roles/role_under_test/tests/test.yml --extra-vars "gnu_cobol_version=${version}" '
 
-  # Test role idempotence.
+  # Test Idempotence
   - idempotence=$(mktemp)
   - docker exec "$(cat ${container_id})" ansible-playbook /etc/ansible/roles/role_under_test/tests/test.yml --extra-vars "gnu_cobol_version=${version}" | tee -a ${idempotence}
   - >
