--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,11 @@ env:
     version: "2"
     init: /lib/systemd/systemd
     run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
+  - distribution: Debian
+    distribution_version: wheezy
+    version: "2"
+    init: /sbin/init
+    run_opts: ""
   - distribution: Fedora
     distribution_version: "24"
     version: "2"
@@ -82,6 +87,11 @@ env:
     version: "1"
     init: /lib/systemd/systemd
     run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
+  - distribution: Debian
+    distribution_version: wheezy
+    version: "1"
+    init: /sbin/init
+    run_opts: ""
   # - distribution: Fedora
   #   distribution_version: "24"
   #   version: "1"
