The use of 'static' has been deprecated. Use 'import_tasks' for static inclusion, or 'include_tasks' for dynamic inclusion. This feature will be removed from ansible-core in version 2.12

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,5 +4,4 @@
   include_vars: "gnucobol-{{ gnu_cobol_version }}.yml"
 
 - name: Include Either Install or Uninstall Tasks
-  include: "{{ gnu_cobol_install | ternary('install', 'uninstall') }}.yml"
-  static: no
+  include_tasks: "{{ gnu_cobol_install | ternary('install', 'uninstall') }}.yml"
